package fr.ensma.a3.ia.element.comportement;

public interface IAttaquant {
    public void ALAttaque(final IAttaquable cible);
}
